syntax = "proto3";
option java_multiple_files = true;
package az.company.authorservice;

message Book {
  string book_id = 1;
  string title = 2;
  float price = 3;
  int32 pages = 4;
  string author_id = 5;
}

message Author {
  string author_id = 1;
  string first_name = 2;
  string last_name = 3;
  string gender = 4;
  string book_id = 5;
}

service AuthorService {

  // unary -- synchronous
  //client will send one request and server will respond with one response
  rpc getAuthorById(Author) returns(Author) {}

  //server-streaming - asynchronous
  //client will send one request and server will respond with stream of messages to the client
  rpc getBooksByAuthor(Author) returns(stream Book) {}

  //server-streaming - asynchronous
  //client will send stream of messages and server will respond with one response
  rpc getExpensiveBook(stream Book) returns(Book) {}

  //bi-directional streaming - asynchronous
  //client will send steam of messages and server will respond back with stream of messages
  rpc getBookByAuthorGender(stream Book) returns(stream Book);

}